add junit integration via database